# Desafios-e-Atividades-em-C

./: Adivinhacao.c  Aula11_Matrizes_Atv1b.c  CMakeLists.txt  Desafio1_de_365.c  Desafio2_de_365.c  Desafio4_de_365.cpp  Xadrez.c
