cmake_minimum_required(VERSION 4.1)
project(Desafios_e_Atividades_em_C)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Desafios_e_Atividades_em_C
        Adivinhacao.c
        Aula11_Matrizes_Atv1a.c
        Aula11_Matrizes_Atv1b.c
        Aula11_Matrizes_Atv1c.c
        Aula11_Matrizes_Desafio.c
        Aula11_Matrizes_Ex1.c
        Aula11_Matrizes_Ex2.c
        Aula12_Var_Compostas.c
        Desafio1_de_365.c
        desafio1Leo.c
        Desafio2_de_365.c
        Desafio4_de_365.cpp
        Desafio_Final_FSF.c
        Exemplo_aula4.cpp
        PedraPapelTesoura.c
        Questao5.c
        questao9.c
        questão_10.cpp
        Sistema_Simples_Saque_Deposito.c
        supertrunfo.c
        Xadrez.c)
